# internal/openapi/model_task_input.go
@@ -1,0 +1,222 @@
+/*
+Activity, Weight & Task API
+
+API for managing activities, weights, and tasks.
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the TaskInput type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &TaskInput{}
+
+// TaskInput struct for TaskInput
+type TaskInput struct {
+	Title string `json:"title"`
+	Description *string `json:"description,omitempty"`
+	Status string `json:"status"`
+}
+
+type _TaskInput TaskInput
+
+// NewTaskInput instantiates a new TaskInput object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewTaskInput(title string, status string) *TaskInput {
+	this := TaskInput{}
+	this.Title = title
+	this.Status = status
+	return &this
+}
+
+// NewTaskInputWithDefaults instantiates a new TaskInput object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewTaskInputWithDefaults() *TaskInput {
+	this := TaskInput{}
+	return &this
+}
+
+// GetTitle returns the Title field value
+func (o *TaskInput) GetTitle() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Title
+}
+
+// GetTitleOk returns a tuple with the Title field value
+// and a boolean to check if the value has been set.
+func (o *TaskInput) GetTitleOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Title, true
+}
+
+// SetTitle sets field value
+func (o *TaskInput) SetTitle(v string) {
+	o.Title = v
+}
+
+// GetDescription returns the Description field value if set, zero value otherwise.
+func (o *TaskInput) GetDescription() string {
+	if o == nil || IsNil(o.Description) {
+		var ret string
+		return ret
+	}
+	return *o.Description
+}
+
+// GetDescriptionOk returns a tuple with the Description field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *TaskInput) GetDescriptionOk() (*string, bool) {
+	if o == nil || IsNil(o.Description) {
+		return nil, false
+	}
+	return o.Description, true
+}
+
+// HasDescription returns a boolean if a field has been set.
+func (o *TaskInput) HasDescription() bool {
+	if o != nil && !IsNil(o.Description) {
+		return true
+	}
+
+	return false
+}
+
+// SetDescription gets a reference to the given string and assigns it to the Description field.
+func (o *TaskInput) SetDescription(v string) {
+	o.Description = &v
+}
+
+// GetStatus returns the Status field value
+func (o *TaskInput) GetStatus() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Status
+}
+
+// GetStatusOk returns a tuple with the Status field value
+// and a boolean to check if the value has been set.
+func (o *TaskInput) GetStatusOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Status, true
+}
+
+// SetStatus sets field value
+func (o *TaskInput) SetStatus(v string) {
+	o.Status = v
+}
+
+func (o TaskInput) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o TaskInput) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["title"] = o.Title
+	if !IsNil(o.Description) {
+		toSerialize["description"] = o.Description
+	}
+	toSerialize["status"] = o.Status
+	return toSerialize, nil
+}
+
+func (o *TaskInput) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"title",
+		"status",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varTaskInput := _TaskInput{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varTaskInput)
+
+	if err != nil {
+		return err
+	}
+
+	*o = TaskInput(varTaskInput)
+
+	return err
+}
+
+type NullableTaskInput struct {
+	value *TaskInput
+	isSet bool
+}
+
+func (v NullableTaskInput) Get() *TaskInput {
+	return v.value
+}
+
+func (v *NullableTaskInput) Set(val *TaskInput) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableTaskInput) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableTaskInput) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableTaskInput(val *TaskInput) *NullableTaskInput {
+	return &NullableTaskInput{value: val, isSet: true}
+}
+
+func (v NullableTaskInput) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableTaskInput) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
